--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "bank-api",
   "version": "1.0.0",
   "description": "An API For a mock Bank",
-  "main": "index.js",
+  "main": "./src/server.js",
   "scripts": {
+    "dev": "nodemon src/server.js",
     "test": "jest"
   },
   "keywords": [
@@ -23,6 +24,7 @@
     "joi": "^17.12.3",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
+    "nodemon": "^3.1.0",
     "sequelize": "^6.37.2"
   }
 }
