--- a/package.json
+++ b/package.json
@@ -18,13 +18,17 @@
   "author": "Joshua Joseph, Eseigbe Samuel, Seed Abraham, Patrick Ijeh, David , Ife and Elijah Banjo",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "joi": "^17.12.3",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
+    "mysql2": "^3.9.4",
     "nodemon": "^3.1.0",
-    "sequelize": "^6.37.2"
+    "pino": "^8.20.0",
+    "sequelize": "^6.37.2",
+    "uuid": "^9.0.1"
   }
 }
