Chore: ENV Template Update

--- a/.env.template
+++ b/.env.template
@@ -1,1 +1,13 @@
-PORT=
+PORT=80
+PASSCODE=
+HOST=
+SQL_USER=
+SQL_PASSWORD=
+DB=
+DIALECT=
+POOL_MAX=
+POOL_MIN=
+POOL_ACQUIRE=
+POOL_IDLE=
+JWT_SECRET=
+JWT_EXPIRE=
